<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView
            style="@style/headerTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/check_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="24dp"
            android:text="@string/cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="24dp"
            android:text="@string/choco"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            style="@style/headerTextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/decrement" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/increment" />

        </LinearLayout>

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="@string/order" />

    </LinearLayout>

</RelativeLayout>